# mos6502.c

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  mos6502.c  mos6502.h
.github/workflows/: linux.yml  macos.yml  windows.yml
cmake/: Warnings.cmake
scripts/: convert.py
tests/: CMakeLists.txt  harness.c  harness.h  main.c  suite_opcodes.c  suite_opcodes.h  suite_programs.c  suite_programs.h
tests/resources/6502-decimal-test/: 6502_decimal_test.lst
tests/resources/6502-functional-test/: 6502_functional_test.asm  6502_functional_test.lst
